[gd_scene load_steps=13 format=3 uid="uid://sgw3b26kq8r5"]

[ext_resource type="Texture2D" uid="uid://bepnwrrmdhsow" path="res://UI-Scenes/Assets/MainMenuBackground.png" id="1_8brde"]
[ext_resource type="Script" uid="uid://bvfm2yh0nwbcw" path="res://UI-Scenes/sc_main_menu.gd" id="1_u52l0"]
[ext_resource type="Texture2D" uid="uid://c8nl5mg0bp0v0" path="res://UI-Scenes/Assets/Mines.png" id="2_u52l0"]
[ext_resource type="Texture2D" uid="uid://dqetlitpu5rfv" path="res://UI-Scenes/Assets/Submarine.png" id="3_nfl1u"]
[ext_resource type="AudioStream" uid="uid://bdbicdb32v165" path="res://UI-Scenes/MusicMenu.ogg" id="5_u52l0"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v8btr"]
texture = ExtResource("1_8brde")

[sub_resource type="Theme" id="Theme_f6q82"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8brde"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8brde"]
bg_color = Color(0.144063, 0.144063, 0.144062, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_u52l0"]
bg_color = Color(0.1, 0.1, 0.1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nfl1u"]
bg_color = Color(0.176419, 0.176419, 0.176419, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u52l0"]

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_u52l0")

[node name="PNL_Background" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00012, 0.999907)
theme_override_styles/panel = SubResource("StyleBoxTexture_v8btr")

[node name="MainMenuHolder" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Mines" type="TextureRect" parent="MainMenuHolder"]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 5294.0
offset_bottom = 2960.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.0831421, 0.0835824)
theme = SubResource("Theme_f6q82")
texture = ExtResource("2_u52l0")

[node name="Submarine" type="TextureRect" parent="MainMenuHolder"]
layout_mode = 0
offset_right = 5334.0
offset_bottom = 3000.0
scale = Vector2(0.0899913, 0.0899865)
texture = ExtResource("3_nfl1u")

[node name="HBoxContainer" type="HBoxContainer" parent="MainMenuHolder"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -191.5
offset_top = -6.0
offset_right = 103.5
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.30389, 0.889065)
theme_override_constants/separation = 32
alignment = 1

[node name="BTN_Options" type="Button" parent="MainMenuHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_8brde")
theme_override_styles/hover = SubResource("StyleBoxFlat_8brde")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u52l0")
theme_override_styles/normal = SubResource("StyleBoxFlat_nfl1u")
action_mode = 0
text = "OPTIONS"

[node name="BTN_Play" type="Button" parent="MainMenuHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_u52l0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8brde")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u52l0")
theme_override_styles/normal = SubResource("StyleBoxFlat_nfl1u")
action_mode = 0
text = "PLAY"

[node name="BTN_Exit" type="Button" parent="MainMenuHolder/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 16
theme_override_styles/focus = SubResource("StyleBoxEmpty_u52l0")
theme_override_styles/hover = SubResource("StyleBoxFlat_8brde")
theme_override_styles/pressed = SubResource("StyleBoxFlat_u52l0")
theme_override_styles/normal = SubResource("StyleBoxFlat_nfl1u")
action_mode = 0
text = "EXIT"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_u52l0")
volume_db = 6.0
autoplay = true

[connection signal="pressed" from="MainMenuHolder/HBoxContainer/BTN_Options" to="." method="_on_btn_options_pressed"]
[connection signal="pressed" from="MainMenuHolder/HBoxContainer/BTN_Play" to="." method="_on_btn_play_pressed"]
[connection signal="pressed" from="MainMenuHolder/HBoxContainer/BTN_Exit" to="." method="_on_btn_exit_pressed"]
